--- a/cinnabar-style-more-labels.yaml
+++ b/cinnabar-style-more-labels.yaml
@@ -393,7 +393,7 @@ textures:
 sources:
     mapzen:
         type: TopoJSON #GeoJSON, MVT, TopoJSON
-        url:  https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson?api_key=vector-tiles-HqUVidw
+        url:  https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
         #url:  https://tile.dev.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
         #url:  //localhost:8080/vector/all/{z}/{x}/{y}.json
         max_zoom: 16
